--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -84,123 +84,4 @@ main, #loader {
   }
 }
 
-// CV
-
-.cv-wrapper {
-  position: relative;
-  .page {
-    position: relative;
-    width: 210mm;
-    height: 297mm;
-    margin: 1rem auto;
-    padding: 10mm 15mm;
-
-    border: rem-calc(1) solid darken($body-background, 15%);
-    @include shadow;
-
-    font-family: Ubuntu, sans-serif;
-
-    .contact-info {
-      margin-bottom: 1rem;
-    }
-
-    * {
-      font-family: inherit;
-    }
-
-    h1, h2 {
-      color: #e88800;
-      font-size: 1.75rem;
-      font-weight: 500;
-      margin: .25rem 0 .5rem 0;
-    }
-
-    h1 {
-      font-size: 2.5rem;
-      text-align: center;
-      margin-bottom: 1.25rem;
-    }
-
-    p {
-      margin-bottom: .5rem;
-    }
-
-    strong {
-      font-weight: 500;
-    }
-
-    a {
-      color: #e88800;
-      text-decoration: none;
-      transition: color .4s;
-
-      &:hover {
-        color: lighten(#e88800, 15%);
-      }
-    }
-
-    ul {
-      li {
-        line-height: 1.75;
-
-        ul {
-          list-style: circle;
-        }
-      }
-    }
-
-    span.year {
-      display: inline-block;
-      right: 15mm;
-      position: absolute;
-      font-weight: 500;
-    }
-
-  }
-
-  .pdf-download {
-    position: absolute;
-    top: 0;
-    right: 0;
-    text-align: right;
-
-    .button {
-      background: #e88800;
-      font-weight: bold;
-
-      &:hover {
-        background: lighten(#e88800, 15%);
-      }
-    }
-  }
-}
-
-@media print {
-  .top-bar, #loader, footer{
-    display: none;
-  }
-
-  main {
-    padding: 0 !important;
-
-    .pdf-download {
-      display: none;
-    }
-  }
-
-  .page {
-    margin: 0 !important;
-    border: none !important;
-    box-shadow: none !important;
-
-    h1, h2 {
-      color: #e88800 !important;
-    }
-
-    a {
-      color: #e88800 !important;
-      text-decoration: none !important;
-    }
-  }
-
-}
+@import "cv";
