--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -3,74 +3,93 @@
         <div class="cell">
             <div class="cv-wrapper">
                 <div class="page">
-                    <h1>Curriculum Vitae</h1>
-                    <div class="contact-info">
-                        <p><strong>Samuel Moncarey</strong><span class="float-right">°06 april 1991</span></p>
-                        <p>0489/91 00 84</p>
-                        <p>samuel.moncarey@gmail.com</p>
-                        <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
+                    <div class="page-padding">
+                        <div id="contact-info">
+                            <div class="grid-x grid-padding-x">
+                                <div class="cell auto">
+                                    <h1>Curriculum Vitae</h1>
+                                    <p><strong>Samuel Moncarey</strong><span class="bday">° 06 / 04 / 1991</span></p>
+                                    <p>0489 / 91 00 84</p>
+                                    <p>samuel.moncarey@gmail.com</p>
+                                    <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
+                                </div>
+                                <div class="cell shrink">
+                                    <div class="profile-picture-frame">
+                                        <img src="/img/71179671_2646152345434968_6485059089750556672_n-square.jpg">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div id="intro">
+                            <div class="grid-x grid-padding-x">
+                                <div class="cell">
+                                    <div class="bubble">
+                                        Hello world, ik ben Samuel: leergierig en gemotiveerd.<br>
+                                        Ik ben op zoek naar een nieuwe professionele uitdaging waarbij ik in een tof team kan werken aan de wereld van morgen.
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <h2>Ervaring</h2>
+                        <div class="grid-x grid-padding-x">
+                            <div class="cell">
+                                <ul class="xp-list">
+                                    <li>
+                                        <h3>Webontwikkelaar <small><strong>Akkoo</strong>, Aarschot</small> <span class="year">2014 - 2018</span></h3>
+                                        <p>Ontwikkeling en onderhoud van weboplossingen voor ondernemingen</p>
+                                    </li>
+                                    <li>
+                                        <h3>Stage Webontwikkelaar <small><strong>Flexmail</strong>, Hasselt</small> <span class="year">2013 - 2014</span></h3>
+                                        <p>Ontwikkeling van unit testen en functionele testen</p>
+                                    </li>
+                                    <li>
+                                        <h3>Stage Webontwikkelaar <small><strong>Apojo</strong>, Aarschot</small> <span class="year">2013</span></h3>
+                                        <p>Ontwikkeling van een applicatie voor de administratie en boekhouding inzake het vervoer van klanten door het bedrijf</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Opleiding</h2>
+                        <div class="grid-x grid-padding-x">
+                            <div class="cell">
+                                <h3>PHP-Drupal Ontwikkelaar <small>Cevora Mechelen</small> <span class="year">2014</span></h3>
+                                <ul class="checklist bi-column-list">
+                                    <li>PHP</li>
+                                    <li>Javascript</li>
+                                    <li>HTML 5 & CSS 3</li>
+                                    <li>Symfony framework & Drupal</li>
+                                </ul>
+                                <h3>Toegepaste informatica <small>Koningklijk Atheneum Redingenhof Leuven</small> <span class="year">2011</span></h3>
+                                <ul class="checklist bi-column-list">
+                                    <li>Webdesign / Webtechnieken</li>
+                                    <li>OOP in Java</li>
+                                    <li>PHP</li>
+                                    <li>MySQL</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <h2>Over mij</h2>
+                        <ul class="checklist">
+                            <li>
+                                Ik ben gepassioneerd door <strong>IT</strong> en <strong>webdevelopment</strong>.
+                            </li>
+                            <li>
+                                Mijn favoriete webdevelopment frameworks zijn Symfony en Foundation.
+                            </li>
+                            <li>
+                                Ik ben een fervente voorstander van vrije en open source software.
+                            </li>
+                            <li>
+                                Mijn favoriete besturingsysteem voor dagelijks gebruik is Arch linux.
+                            </li>
+                            <li>
+                                Mijn <strong>Github</strong> profiel: <a href="https://github.com/samuelmc">github.com/samuelmc</a>.
+                            </li>
+                            <li>
+                                <strong>Talenkennis</strong>: Tweetalige opvoeding <strong>Nederlands</strong>-<strong>Frans</strong>; mijn <strong>Engels</strong> is ook zeer goed.
+                            </li>
+                        </ul>
                     </div>
-                    <h2>Ervaring</h2>
-                    <ul>
-                        <li>
-                            <strong>Webontwikkelaar</strong> bij <strong>Akkoo</strong>, Aarschot <span class="year">2014 – 2018</span><br>Ontwikkeling en onderhoud van weboplossingen voor ondernemingen
-                        </li>
-                        <li>
-                            <strong>Webontwikkelaar</strong> bij <strong>Ademar</strong>, Hasselt <span class="year">2013 – 2014</span><br>Ontwikkeling van unit testen en functionele testen
-                        </li>
-                        <li>
-                            <strong>Webontwikkelaar</strong> bij <strong>Huize Eigen Haard</strong>, Aarschot <span class="year">2013</span><br>Ontwikkeling van een web applicatie voor facturatie van vervoer
-                        <li>
-                            Diverse studentenjobs: houtbewerking, bouw, magazijnier
-                        </li>
-                    </ul>
-                    <h2>Opleiding</h2>
-                    <ul>
-                        <li>
-                            Opleiding <strong>PHP / Drupal Ontwikkelaar</strong>, VDAB <span class="year">2013</span>
-                        </li>
-                        <li>
-                            <strong>Toegepaste Informatica</strong> aan de <strong>KHL </strong>(thans UCLL), Leuven<span class="year">2011 - 2012</span>
-                        </li>
-                        <li>
-                            <strong>Secundair Onderwijs</strong><span class="year">2011</span>
-                            <ul>
-                                <li>
-                                    Toegepaste Informatica Koninklijk Atheneum Redingenhof, Leuven (derde graad)
-                                </li>
-                                <li>
-                                    Biotechnische Wetenschappen, De Wijnpers, Leuven (tweede graad)
-                                </li>
-                                <li>
-                                    De Zonnewijzer Steinerschool, Wijgmaal, Leuven (lagere school en eerste graad)
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                    <h2>Extra info</h2>
-                    <ul>
-                        <li>
-                            Ik ben gepassioneerd door <strong>IT</strong> en <strong>webdevelopment</strong>.
-                        </li>
-                        <li>
-                            Mijn favoriete webdevelopment frameworks zijn Symfony en Foundation.
-                        </li>
-                        <li>
-                            Ik ben een fervente voorstander van open source en een Linux gebruiker.
-                        </li>
-                        <li>
-                            Mijn <strong>Github</strong> profiel: <a>https://github.com/samuelmc</a>.
-                        </li>
-                        <li>
-                            <strong>Talenkennis</strong>: Tweetalige opvoeding <strong>Nederlands</strong>-<strong>Frans</strong>; mijn <strong>Engels</strong> is ook zeer goed.
-                        </li>
-<!--                        <li>-->
-<!--                            <strong>Sport</strong>: Ik ben een fervente fietser. Vroeger heb ik ook aan athletiek en basketbal gedaan.-->
-<!--                        </li>-->
-<!--                        <li>-->
-<!--                            Daarnaast speelt <strong>muziek</strong> ook een grote rol in mijn leven. Zelf speel ik keyboard.-->
-<!--                        </li>-->
-                    </ul>
                 </div>
                 <div class="pdf-download">
                     <a download href="/downloads/samuel-moncarey-cv-nl.pdf" class="button">Download</a>
