--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -11,7 +11,7 @@
                                     <p><strong>Samuel Moncarey</strong><span class="bday">° 06 / 04 / 1991</span></p>
                                     <p>0489 / 91 00 84</p>
                                     <p>samuel.moncarey@gmail.com</p>
-                                    <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
+                                    <p>Sint-Maartensdal 2A bus 0011 - 3000 Leuven</p>
                                 </div>
                                 <div class="cell shrink">
                                     <div class="profile-picture-frame">
