--- a/views/cv/fr.html
+++ b/views/cv/fr.html
@@ -8,7 +8,7 @@
                         <p><strong>Samuel Moncarey</strong><span class="float-right">°06 avril 1991</span></p>
                         <p>0489/91 00 84</p>
                         <p>samuel.moncarey@gmail.com</p>
-                        <p>Amerstraat 145 bus 4 - 3200 Aarschot</p>
+                        <p>Sint-Maartensdal 2A bus 0011 - 3000 Leuven</p>
                     </div>
                     <h2>Experience</h2>
                     <ul>
