--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -25,6 +25,10 @@
                             <div class="cell">
                                 <ul class="xp-list">
                                     <li>
+                                        <h3>Stage Fietshersteller <small><strong>Rijwielen Jocobs</strong>, Leuven</small> <span class="year">2021</span></h3>
+                                        <p>Nieuwe fietsen in elkaar steken, onderhoud en herstellingen</p>
+                                    </li>
+                                    <li>
                                         <h3>Webontwikkelaar <small><strong>Akkoo</strong>, Aarschot</small> <span class="year">2014 - 2018</span></h3>
                                         <p>Ontwikkeling en onderhoud van weboplossingen voor ondernemingen</p>
                                     </li>
