--- a/views/cv/nl.html
+++ b/views/cv/nl.html
@@ -25,7 +25,7 @@
                             <div class="cell">
                                 <ul class="xp-list">
                                     <li>
-                                        <h3>Stage Fietshersteller <small><strong>Rijwielen Jocobs</strong>, Leuven</small> <span class="year">2021</span></h3>
+                                        <h3>Stage Fietshersteller <small><strong>Rijwielen Jacobs</strong>, Leuven</small> <span class="year">2021</span></h3>
                                         <p>Nieuwe fietsen in elkaar steken, onderhoud en herstellingen</p>
                                     </li>
                                     <li>
